unpackaged/main/default/objects/Account/fields/CSE_Demo_Field__c.field-meta.xml
<CustomField>
    <fullName>CSE_Demo_Field__c</fullName>
    <label>CSE Demo Field</label>
    <length>100</length>
    <type>Text</type>
</CustomField>